compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_conflicting_endianness1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = <<1:big-little>> x"

---
error: BitString Segment Error
  ┌─ /src/one/two.gleam:1:17
  │
1 │ let x = <<1:big-little>> x
  │                 ^^^^^^ This is an extra endianness specifier.

Hint: This segment already has an endianness of big.
See: https://gleam.run/book/tour/bit-strings.html

